Added out argument for NS_MsgStripRE to avoid altering the const argument, bug 131983, r=ducarroz, sr=bienvenu.